--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/EquipoTransporte/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/EquipoTransporte/Index.cshtml
@@ -14,6 +14,7 @@
 <html>
 <head>
     <link href="~/Resources/css/toggleCl.css" rel="stylesheet" />
+    <script src="~/Resources/js/ParqueVehicular.js"></script>
     <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
     <script src="~/assets/js/pages/ui/notifications.js"></script>
     <script type="text/javascript">
@@ -328,6 +329,9 @@
                                         @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row clearfix">
+                               
                             </div>
                             <div class="row clearfix">
                                 <div class="col-lg-12 col-md-12 col-sm-12">
