--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVenta/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVenta/Index.cshtml
@@ -41,8 +41,11 @@
                 var utilidad = $("#txtUtilidad").val();
 
                 var operacion = parseFloat(precio) + parseFloat(utilidad) + parseFloat(flete);
+                //isNaN(operacion)
+                if (operacion !== operacion)
+                    operacion = '';
 
-                $("#IdPrecioSalidaKg").val(operacion)
+                $("#IdPrecioSalidaKg").val(operacion.toFixed(2))
 
 
                 /*****factorLitrosaKilos*****/
@@ -53,8 +56,8 @@
                 }
 
                 $.getJSON(url, { idEmpresa: id }, function (data) {
-                    var factor = (precio + flete) - data;
-                    $("#IdPrecioSalidaLt").val(factor)
+                    var factor = ( parseFloat(precio) +  parseFloat(flete)) -  parseFloat(data);
+                    $("#IdPrecioSalidaLt").val(factor.toFixed(2))
                 });
 
                 /**********/
