--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
@@ -12,10 +12,27 @@
             new Script { ExtensionSuite = ExtensionSuite.Editors },
             new Script { ExtensionSuite = ExtensionSuite.GridView }
         )
+@*<script src="~/Resources/js/Asignacion.js"> </script>*@
+<script type="text/javascript">
+    function OnSelectedIndexChanged(s, e) {
+        var item = IdVehiculo.cphidenVehiculos[IdVehiculo.GetSelectedIndex()].split("|")
+        if (item[0] == 'True') {//Camioneta
+            $('#TipoVehiculo').val(1)
+        }
+        if (item[1] == 'True') {//Pipa
+            $('#TipoVehiculo').val(2)
+        }
+        if (item[2] == 'True') {//Utilitario
+            $('#TipoVehiculo').val(3)
+        }
+    }
+</script>
 <body>
     @using (Html.BeginForm("Crear", "Asignacion", FormMethod.Post))
     {
+
         
+        <input type="text" hidden="hidden" name="TipoVehiculo" id="TipoVehiculo" />
         <section class="content home">
             <div class="container-fluid">
                 <div class="block-header">
@@ -64,21 +81,19 @@
                                               settings.SelectedIndex = 0;
                                               settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
                                               settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                                              //settings.Properties.ValueType = typeof(int);
-                                              //settings.Properties.TextField = "DescVehiculo";
-                                              //settings.Properties.ValueField = "IdEquipoTransporte";
-                                              settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChange";
-                                              settings.Properties.TextFormatString = "{0}";
-                                              settings.Properties.Columns.Add("EsCamioneta", "EsCamioneta", 130);
-                                              settings.Properties.Columns.Add("EsPipa", "EsPipa", 130);
-                                              settings.Properties.Columns.Add("Esutilitario", "Esutilitario", 230);
+                                              settings.Properties.ValueType = typeof(int);
+                                              settings.Properties.TextField = "DescVehiculo";
+                                              settings.Properties.ValueField = "IdEquipoTransporte";
+                                              settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedIndexChanged";
+                                              settings.Properties.TextFormatString = "{0} {1} {2}";
+
                                               settings.CustomJSProperties = (sender, e) =>
                                               {
                                                   System.Collections.ArrayList list = new System.Collections.ArrayList();
                                                   MVCxComboBox combo = sender as MVCxComboBox;
                                                   foreach (ListEditItem item in combo.Items)
-                                                      list.Add(item.GetValue(item.GetValue("EsCamioneta") + "|" + item.GetValue("EsPipa") + "|" + item.GetValue("Esutilitario")));
-                                                  e.Properties["cpHiddenColumnValues"] = list;
+                                                      list.Add(item.GetValue("EsCamioneta") + "|" + item.GetValue("EsPipa") + "|" + item.GetValue("EsUtilitario"));
+                                                  e.Properties["cphidenVehiculos"] = list;
                                               };
                                           }).BindList(ViewBag.Vehiculos).Bind(Model.IdVehiculo).GetHtml()
                                                @Html.ValidationMessageFor(m => m.IdVehiculo, "", new { @class = "alert-danger" })
